crates/toml/tests/snapshots/invalid/inline-table/no-comma-02.stderr
TOML parse error at line 1, column 42
  |
1 | arrr = { comma-missing = true valid-toml = false }
  |                                          ^
extra assignment between key-value pairs, expected `,`
